infrastructure/platform/security/wazuh/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wazuh
  labels:
    app.kubernetes.io/component: siem
    payu.io/managed-by: platform-team
